--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -12,10 +12,10 @@
             }
 
             const elt = entry.target;
-            const fraction = elt.dataset.fraction;
+            const fraction = parseInt(elt.dataset.fraction);
 
             const previousMarkers = [25, 50, 75, 100].filter(p => p < fraction);
-            const seenPreviousMarkers = previousMarkers.any(marker => seenMarkers.has(marker));
+            const seenPreviousMarkers = previousMarkers.every(m => seenMarkers.has(m));
             const marker = seenPreviousMarkers ? `content_read_${fraction}` : `content_jumped_${fraction}`;
 
             seenMarkers.add(fraction);
