--- a/_includes/references/bro-blog.html
+++ b/_includes/references/bro-blog.html
@@ -5,19 +5,19 @@
 
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
-            <a href="{% post_url tumblr/2014-07-22-php-blog-part-1 %}">
+            <a href="/tumblr/2014/07/22/php-blog-part-1.html">
                 Чоткій блог. Часть перша
             </a>
         </li>
 
         <li class="list-group-item">
-            <a href="{% post_url tumblr/2014-07-27-php-blog-part-2 %}">
+            <a href="/tumblr/2014/07/27/php-blog-part-2.html">
                 Чоткій блог. Часть друга
             </a>
         </li>
 
         <li class="list-group-item">
-            <a href="{% post_url tumblr/2014-07-28-php-blog-part-3 %}">
+            <a href="/tumblr/2014/07/28/php-blog-part-3.html">
                 Чоткій блог. Часть третя
             </a>
         </li>
