--- a/_includes/references/two-sides-of-web-application.html
+++ b/_includes/references/two-sides-of-web-application.html
@@ -5,19 +5,19 @@
 
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
-            <a href="{% post_url 2015-09-20-two-sides-of-web-application-part-1 %}">
+            <a href="/2015/09/20/two-sides-of-web-application-part-1.html">
                 Part 1: The Tools
             </a>
         </li>
 
         <li class="list-group-item">
-            <a href="{% post_url 2016-02-11-two-sides-of-web-application-part-2 %}">
+            <a href="/2016/02/11/two-sides-of-web-application-part-2.html">
                 Part 2: Sketching
             </a>
         </li>
 
         <li class="list-group-item">
-            <a href="{% post_url 2016-02-11-two-sides-of-web-application-part-3 %}">
+            <a href="/2016/02/11/two-sides-of-web-application-part-3.html">
                 Part 3: Communication Layer
             </a>
         </li>
